--- a/index.html
+++ b/index.html
@@ -104,14 +104,8 @@ Road shimmer wigglin' the vision
 Heat, heat waves, I'm swimmin' in a mirror
                 </span>
 
-        <p> <big><span style="color: brown;">Dj Burna256</span></big>
-        <img src = "second.png" height="150px" align="left"> 
+        <p>Dj Burna256
         </p>
-        <a href="Audio.html"
-target="_blank"
-title="click here to view my gallery too">
-click here!"
-        </a>
     </body>
     
 </html>
